feat: add attendance feature like auto holiday absent and fetch attendance history
