# server/src/routes/attendance.route.js
@@ -1,5 +1,9 @@
 const {Router} = require('express');
-const { MarkAttendance, GetTodayAttendance } = require('../controllers/attendance.controller');
+const { MarkAttendance, GetTodayAttendance,
+    GetAttendanceHistory,
+    GetMyAttendanceHistory,
+        GetMyEmployeeAttendanceHistory
+} = require('../controllers/attendance.controller');
 const { verifyToken } = require('../validators/auth.validator');
 const router = Router();
 
@@ -10,6 +14,9 @@ const router = Router();
 router.post("/",verifyToken, MarkAttendance)
 
 /********************************* GET RREQUESTS ****************************************/
+router.get("/history", verifyToken, GetAttendanceHistory)
+router.get("/myhistory", verifyToken, GetMyAttendanceHistory)
+router.get("/myemployeehistory", verifyToken, GetMyEmployeeAttendanceHistory)
 router.get("/",verifyToken, GetTodayAttendance)
 /********************************* PATCH RREQUESTS ****************************************/
 /********************************* DELETE RREQUESTS ****************************************/
